--- a/css/style.css
+++ b/css/style.css
@@ -858,9 +858,6 @@ textarea {
   display: block;
 }
 
-.itch {
-  display: none;
-  @media only screen and (max-width: 551px) {
-    .itch {
-      display: none; } }
-}
+@media only screen and (max-width: 600px) {
+  iframe {
+    width: fit-content} }
